dodani endpointu pro fetchovani dat z klienta, vytvorena zakladni kostra klienta - chybi ride stranka a dodat propojeni se serverem
